# MCP-Jira

./: ARCHITECTURE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  dev.db  pyproject.toml  test_create_project.py
app/: main.py
app/api/: routes_comments.py  routes_documents.py  routes_epics.py  routes_projects.py  routes_sprints.py  routes_stories.py
app/mcp/: server.py
app/models/: db.py  entities.py  schemas.py
app/services/: sprints.py  stories.py
tests/: conftest.py  test_integration_api.py  test_schemas.py  test_workflow.py
